# slurm_utils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/slurm_utils/: request_gpu.py
