[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_utils"
version = "0.1.1"
description = "Utility scripts for managing Slurm jobs on Snellius"
readme = "README.md"
authors = [
  { name="Samuele Papa", email="samuele.papa@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.scripts]
request-gpu = "slurm_utils.request_gpu:main"
